--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "serve docs -n"
   },
   "keywords": [],
   "author": "",
